# job_crawler

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
core/: settings.py  urls.py  views.py
jobs/: urls.py  views.py
templates/pages/: base.html  home.html
