[tool.poetry]
name = "job-crawler"
version = "0.1.0"
description = ""
authors = ["stephen0501 <tom9876555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
